# aipywidgets

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: release.yml
binder/: environment.yml  postBuild  requirements.txt
examples/: ai_assist_proposal.ipynb  basic_form.ipynb
lib/: index.js  plugin.js
src/aipywidgets/: __init__.py  actions.py  ai.py  assist_layer.py  config.py  field_path.py  fields.py  form.py
src/aipywidgets/ai_tools/: __init__.py  base.py  catalog.py  identifier_tools.py  url_tools.py
src/aipywidgets/fields/: __init__.py  base.py  display.py  local_file_select.py  primitive.py  structured.py
tests/: test_ai.py  test_core.py
