[build-system]
requires = ["hatchling", "hatch-jupyter-builder", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "aipywidgets"
dynamic = ["version"]
description = "AI-assisted form widgets for Jupyter Notebook and JupyterLab"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Satoshi Yazawa" },
]
dependencies = [
    "ipywidgets>=8.0",
]

[project.optional-dependencies]
ai = [
    "openai>=1.0",
]
dev = [
    "jupyterlab>=4.0",
    "openai>=1.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/aipywidgets"]

[tool.hatch.build.targets.wheel.shared-data]
"labextension" = "share/jupyter/labextensions/aipywidgets"

[tool.hatch.build.hooks.jupyter-builder]
dependencies = ["hatch-jupyter-builder"]
build-function = "hatch_jupyter_builder.npm_builder"
ensured-targets = [
    "labextension/package.json",
    "labextension/static/style.js",
]

[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
build_cmd = "build"
